--- a/app/views/admin/users/new.html.slim
+++ b/app/views/admin/users/new.html.slim
@@ -1,2 +1,3 @@
-h1 Admin::User#new
-p Find me in app/views/admin/user/new.html.slim
+.w-5/6.
+  h1.text-whtie Admin::User#new
+  p.text-white.ml-32 Find me in app/views/admin/user/new.html.slim
