add: ユーザー登録フォームを作成

--- a/app/views/admin/users/new.html.slim
+++ b/app/views/admin/users/new.html.slim
@@ -1,3 +1,4 @@
-.w-5/6.
-  h1.text-whtie Admin::User#new
-  p.text-white.ml-32 Find me in app/views/admin/user/new.html.slim
+.w-5/6.right-0.absolute
+  .section.mx-8.pt-8
+    h1.font-semibold.text-3xl 従業員登録
+    = render 'form'
