--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -1,4 +1,4 @@
-.w-1/6.h-full.shadow-md.px-1.absolute.bg-light-green
+.w-60.h-full.shadow-md.px-1.absolute.bg-light-green
   ul.relative.top-12
     li.relative.mb-3
       = link_to new_admin_user_path, class: 'flex items-center text-lg py-4 px-6 h-12 overflow-hidden text-white text-ellipsis whitespace-nowrap rounded hover:bg-main-green transition duration-300 ease-in-out' do
