add: kaminariを日本語化する #5

--- a/app/views/admin/users/_user.html.slim
+++ b/app/views/admin/users/_user.html.slim
@@ -1,4 +1,4 @@
-tr.border-b.hover:bg-orange-100.bg-gray-100
+tr.border-b.hover:bg-orange-100.bg-slate-100
   td.p-3.px-5 = user.name
   td.p-3.px-5 = user.email
   td.p-3.px-5 = user.salary
