--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,7 +1,7 @@
 .w-5/6.right-0.absolute
   .section.mx-8.pt-8
     h1.font-semibold.text-3xl 従業員管理
-    table.w-full.text-md.bg-white.shadow-md.rounded.my-4
+    table.w-full.text-md.bg-slate-100.shadow-md.rounded.my-4
       tbody
         tr.border-b
           th.text-left.p-3.px-5 = t('activerecord.attributes.user.name')
@@ -9,4 +9,4 @@
           th.text-left.p-3.px-5 = t('activerecord.attributes.user.salary')
           th.text-left.p-3.px-5 = t('activerecord.attributes.user.role')
         = render @users
-        = paginate @users 
+    = paginate @users 
