add: ユーザー編集機能の追加 #5

--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,2 +1,4 @@
-h1 Admin::User#edit
-p Find me in app/views/admin/user/edit.html.slim
+.w-5/6.right-0.absolute
+  .section.mx-8.pt-8
+    h1.font-semibold.text-3xl 従業員編集
+    = render 'edit_form',user: @user
