--- a/app/views/admin/layouts/admin_login.html.slim
+++ b/app/views/admin/layouts/admin_login.html.slim
@@ -10,5 +10,6 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body.text-gray-600
+    = render 'shared/flash_message'
     = yield
     = render 'admin/shared/footer'
