--- a/app/views/admin/layouts/application.html.slim
+++ b/app/views/admin/layouts/application.html.slim
@@ -11,5 +11,6 @@ html
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body.text-gray-600
     = render 'admin/shared/sidebar'
+    = render 'shared/flash_message'
     = yield
     = render 'admin/shared/footer'
