add: 現在時刻をattendances#newに表示 #8

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,6 +1,6 @@
 - if logged_in?
   header
-    nav.fixed.w-full.z-10.text-white.bg-light-green.py-3.px-4.md:px-16.md:flex.md:items-center.md:justify-between
+    nav.fixed.w-full.text-white.bg-light-green.py-3.px-4.md:px-16.md:flex.md:items-center.md:justify-between
       div.flex.justify-between
         = link_to root_path, class: "font-bold cursor-pointer flex" do
           = image_tag('logo.png', size: '25x25')
