--- a/app/views/attendances/new.html.slim
+++ b/app/views/attendances/new.html.slim
@@ -1,2 +1,5 @@
 .section.mx-8.pt-8
-  p.mt-20.text-center.text-5xl id="currentTime" 
+  p.mt-20.text-center.text-5xl id="currentTime"
+  .flex.flex-col.text-center.items-center.my-20
+    = link_to '出勤する', '#', class: 'text-white bg-light-green hover:bg-main-green px-10 py-2 rounded-lg mb-10'
+    = link_to '退勤する', '#', class: 'text-white bg-accent-red hover:bg-light-red px-10 py-2 rounded-lg'
