--- a/app/javascript/stylesheets/application.css
+++ b/app/javascript/stylesheets/application.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 .danger{
-  @apply text-white z-10 mt-5 rounded-lg py-5 px-10 absolute right-10 shadow bg-red-300;
+  @apply text-white mt-16 rounded-lg py-5 px-10 absolute right-10 shadow bg-red-300;
 }
 
 .success{
-  @apply text-white z-10 mt-5 rounded-lg py-5 px-10 absolute right-10 shadow bg-green-300;
+  @apply text-white mt-16 rounded-lg py-5 px-10 absolute right-10 shadow bg-green-300;
 }
