--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,6 +1,6 @@
 .w-5/6.right-0.absolute
   .section.mx-8.pt-8
-    h1.font-semibold.text-3xl 従業員管理
+    h1.font-semibold.text-3xl.mb-10 従業員管理
     table.w-full.text-md.bg-slate-100.shadow-md.rounded.my-4
       tbody
         tr.border-b
