--- a/app/views/admin/attendances/index.html.slim
+++ b/app/views/admin/attendances/index.html.slim
@@ -2,7 +2,14 @@
   .section.mx-8.pt-8
     h1.font-semibold.text-3xl.mb-10 勤怠管理
     .mb-10
-      = link_to '未承認ステータスはこちら', unapproved_admin_attendances_path, class: 'px-4 py-4 bg-light-green hover:bg-main-green text-white rounded-lg '
+      = link_to '未承認ステータスはこちら', unapproved_admin_attendances_path, class: 'px-4 py-4 bg-light-green hover:bg-main-green text-white rounded-lg'
+    .mb-10 
+      p
+        span.px-2.bg-light-green.text-white.rounded-lg 青色
+        | ・・・承認済み
+      p
+        span.px-2.bg-accent-red.text-white.rounded-lg 赤色
+        | ・・・未承認
     = month_calendar(events: @attendances) do |date, attendances|
       = date
       - attendances.each do |attendance|
