add: attendance#destroyを実装 #20

--- a/app/views/attendances/edit.html.slim
+++ b/app/views/attendances/edit.html.slim
@@ -9,4 +9,6 @@
       .mb-6
         = f.label :end_time, class: 'block mb-1 text-sm font-medium text-gray-900 dark:text-gray-300'
         = f.datetime_select :end_time, class: 'border-2 border-gray-200 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5'
-      = f.button '更新する', class: 'text-white bg-accent-red rounded-full hover:bg-light-red font-semibold text-base px-5 py-2.5 text-center mr-2 shadow-md cursor-pointer w-1/4'
+      .mb-6
+        = f.button '更新する', class: 'text-white bg-accent-red rounded-full hover:bg-light-red font-semibold text-base px-5 py-2.5 text-center mr-2 shadow-md cursor-pointer w-1/4'
+      = link_to '削除する', attendance_path(@attendance), method: :delete, class: 'text-white bg-accent-red rounded-full hover:bg-light-red font-semibold text-base px-5 py-2.5 text-center mr-2 shadow-md cursor-pointer w-1/4'
