--- a/app/views/admin/users/_user.html.slim
+++ b/app/views/admin/users/_user.html.slim
@@ -6,4 +6,4 @@ tr.border-b.hover:bg-orange-100.bg-slate-100
   td.p-3.px-5
     = link_to '詳細', admin_user_path(user), class: 'mr-3 text-white bg-blue-400 hover:bg-blue-300 px-4 py-2 rounded-lg'
     = link_to '編集', edit_admin_user_path(user), class: 'mr-3 text-white bg-green-400 hover:bg-green-300 px-4 py-2 rounded-lg'
-    = link_to '削除', '#', class: 'mr-3 text-white bg-red-400 hover:bg-red-300 px-4 py-2 rounded-lg'
+    = link_to '削除', admin_user_path(user), method: :delete, class: 'mr-3 text-white bg-red-400 hover:bg-red-300 px-4 py-2 rounded-lg'
