--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -1,2 +1,15 @@
-h1 Admin::User#show
-p Find me in app/views/admin/user/show.html.slim
+.w-5/6.right-0.absolute
+  .section.mx-8.pt-8
+    h1.font-semibold.text-3xl.mb-10 従業員勤怠情報
+    .mb-10 
+      p
+        span.px-2.bg-light-green.text-white.rounded-lg 青色
+        | ・・・承認済み
+      p
+        span.px-2.bg-accent-red.text-white.rounded-lg 赤色
+        | ・・・未承認
+    = month_calendar(events: @attendances) do |date, attendances|
+      = date
+      - attendances.each do |attendance|
+        div
+          = link_to "#{attendance.user.name} #{attendance.start_time.hour}時〜", admin_attendance_path(attendance), class: "#{attendance.status_color} text-white rounded-lg px-2"
