add: sidebar, headerにログインしているユーザーの名前を表示した#34

--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -15,8 +15,13 @@
         svg.h-6.w-6.mr-3 fill="none" stroke="white" stroke-width="2" viewbox=("0 0 24 24") xmlns="http://www.w3.org/2000/svg" 
           path d=("M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z") stroke-linecap="round" stroke-linejoin="round" 
         span 従業員登録
-    li.relative
+    li.relative.mb-3
       = link_to admin_logout_path, method: :delete, class: 'flex items-center text-lg py-4 px-6 h-12 overflow-hidden text-white text-ellipsis whitespace-nowrap rounded hover:bg-main-green transition duration-300 ease-in-out' do
         svg.h-6.w-6.mr-3 fill="none" stroke="white" stroke-width="2" viewbox=("0 0 24 24") xmlns="http://www.w3.org/2000/svg" 
           path d=("M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1") stroke-linecap="round" stroke-linejoin="round" 
         span ログアウト
+    li.relative
+      = link_to admin_user_path(current_user), class: 'flex items-center text-lg py-4 px-6 h-12 overflow-hidden text-white text-ellipsis whitespace-nowrap rounded hover:bg-main-green transition duration-300 ease-in-out' do
+        svg.h-6.w-6.mr-3 fill="none" stroke="white" stroke-width="2" viewbox=("0 0 24 24") xmlns="http://www.w3.org/2000/svg" 
+          path d=("M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z") stroke-linecap="round" stroke-linejoin="round" 
+        span #{current_user.name}
